tests/rosetta/out/Fortran/averages-mean-time-of-day.error
gfortran: exit status 1
/tmp/averages-mean-time-of-day.f90:155:5:

  155 |     s = int((mod(si,60)))
      |     1
Error: Symbol ‘s’ at (1) has no IMPLICIT type
/tmp/averages-mean-time-of-day.f90:134:54:

  134 |   recursive character(len=100) function meanTime(times) result(res)
      |                                                      1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘times’ at (1)
/tmp/averages-mean-time-of-day.f90:160:13:

  160 |     inputs = (/'23:00:17','23:40:20','00:12:45','00:17:19'/)
      |             1
Error: Cannot convert CHARACTER(8) to INTEGER(4) at (1)
/tmp/averages-mean-time-of-day.f90:161:22:

  161 |     print *, meanTime(inputs)
      |                      1
Error: Rank mismatch in argument ‘times’ at (1) (scalar and rank-1)
/tmp/averages-mean-time-of-day.f90:140:12:

  140 |       sec = parseSec(times(((i)+1)))
      |            1
Error: Type mismatch in argument ‘s’ at (1); passed INTEGER(4) to CHARACTER(100)
/tmp/averages-mean-time-of-day.f90:142:30:

  142 |       ssum = (ssum + sinApprox(ang))
      |                              1
Error: Type mismatch in argument ‘x’ at (1); passed INTEGER(4) to REAL(4)
/tmp/averages-mean-time-of-day.f90:143:30:

  143 |       csum = (csum + cosApprox(ang))
      |                              1
Error: Type mismatch in argument ‘x’ at (1); passed INTEGER(4) to REAL(4)
/tmp/averages-mean-time-of-day.f90:139:24:

  139 |     do while ((i < size(times)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
